--- a/integration/index.html
+++ b/integration/index.html
@@ -11,6 +11,14 @@
     <h1>Exercice intégration</h1>
     <h2>Entraînement checkpoint 1</h2>
   </header>
+  <nav>
+    <ul>
+      <li><a href="#instructions-header">Header</a></li>
+      <li><a href="#instructions-layout">Layout</a></li>
+      <li><a href="#instructions-navbar">Navbar</a></li>
+      <li><a href="#instructions-responsive">Responsive</a></li>
+    </ul>
+  </nav>
 
   <section id="instructions-header">
     <p>Des instructions sont données pour "embellir" chaque section.</p>
@@ -51,7 +59,7 @@
 
   </section>
 
-  <section>
+  <section id="instructions-responsive">
     <h3>4. Responsive</h3>
 
     <p>Dans cette section se trouvent des "cards".</p>
